--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,6 @@ name: Build Paxi Contracts
 on:
   push:
     branches: [ main, develop ]
-    paths:
-      - 'contracts/**'
-      - '.github/workflows/build.yml'
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -14,38 +11,28 @@ env:
   RUST_VERSION: 1.81.0
 
 jobs:
-  build-lp-lock:
-    name: Build LP Lock Contract
+  generate-and-build-lp-lock:
+    name: Generate & Build LP Lock
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
           toolchain: ${{ env.RUST_VERSION }}
-          target: wasm32-unknown-unknown
-          override: true
+          targets: wasm32-unknown-unknown
 
-      - name: Cache cargo registry
+      - name: Cache cargo
         uses: actions/cache@v4
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: contracts/prc20-lp-lock/target
-          key: ${{ runner.os }}-target-lp-lock-${{ hashFiles('contracts/prc20-lp-lock/Cargo.lock') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install wasm-opt
         run: |
@@ -54,7 +41,12 @@ jobs:
           sudo cp binaryen-version_116/bin/wasm-opt /usr/local/bin/
           wasm-opt --version
 
-      - name: Build LP Lock contract
+      - name: Generate LP Lock contract
+        run: |
+          chmod +x generate_lp_lock.sh
+          ./generate_lp_lock.sh
+
+      - name: Build LP Lock
         working-directory: contracts/prc20-lp-lock
         run: |
           cargo build --release --target wasm32-unknown-unknown
@@ -66,15 +58,13 @@ jobs:
           wasm-opt -Oz \
             target/wasm32-unknown-unknown/release/prc20_lp_lock.wasm \
             -o prc20_lp_lock_optimized.wasm
-          ls -lh prc20_lp_lock_optimized.wasm
-
-      - name: Check contract size
-        working-directory: contracts/prc20-lp-lock
-        run: |
+          
           SIZE=$(wc -c < prc20_lp_lock_optimized.wasm)
-          echo "Contract size: $SIZE bytes"
-          if [ $SIZE -gt 524288 ]; then
-            echo "::warning::Contract size exceeds 512KB limit"
+          SIZE_KB=$((SIZE / 1024))
+          echo "Contract size: ${SIZE_KB}KB"
+          
+          if [ $SIZE -gt 800000 ]; then
+            echo "::warning::Contract size ${SIZE_KB}KB is large (>800KB)"
           fi
 
       - name: Upload artifact
@@ -82,40 +72,30 @@ jobs:
         with:
           name: prc20-lp-lock
           path: contracts/prc20-lp-lock/prc20_lp_lock_optimized.wasm
-          retention-days: 30
+          retention-days: 90
 
-  build-vesting:
-    name: Build Vesting Contract
+  generate-and-build-vesting:
+    name: Generate & Build Vesting
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
           toolchain: ${{ env.RUST_VERSION }}
-          target: wasm32-unknown-unknown
-          override: true
+          targets: wasm32-unknown-unknown
 
-      - name: Cache cargo registry
+      - name: Cache cargo
         uses: actions/cache@v4
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: contracts/prc20-vesting/target
-          key: ${{ runner.os }}-target-vesting-${{ hashFiles('contracts/prc20-vesting/Cargo.lock') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install wasm-opt
         run: |
@@ -124,7 +104,12 @@ jobs:
           sudo cp binaryen-version_116/bin/wasm-opt /usr/local/bin/
           wasm-opt --version
 
-      - name: Build Vesting contract
+      - name: Generate Vesting contract
+        run: |
+          chmod +x generate_vesting.sh
+          ./generate_vesting.sh
+
+      - name: Build Vesting
         working-directory: contracts/prc20-vesting
         run: |
           cargo build --release --target wasm32-unknown-unknown
@@ -136,15 +121,13 @@ jobs:
           wasm-opt -Oz \
             target/wasm32-unknown-unknown/release/prc20_vesting.wasm \
             -o prc20_vesting_optimized.wasm
-          ls -lh prc20_vesting_optimized.wasm
-
-      - name: Check contract size
-        working-directory: contracts/prc20-vesting
-        run: |
+          
           SIZE=$(wc -c < prc20_vesting_optimized.wasm)
-          echo "Contract size: $SIZE bytes"
-          if [ $SIZE -gt 524288 ]; then
-            echo "::warning::Contract size exceeds 512KB limit"
+          SIZE_KB=$((SIZE / 1024))
+          echo "Contract size: ${SIZE_KB}KB"
+          
+          if [ $SIZE -gt 800000 ]; then
+            echo "::warning::Contract size ${SIZE_KB}KB is large (>800KB)"
           fi
 
       - name: Upload artifact
@@ -152,13 +135,15 @@ jobs:
         with:
           name: prc20-vesting
           path: contracts/prc20-vesting/prc20_vesting_optimized.wasm
-          retention-days: 30
+          retention-days: 90
 
   create-release:
     name: Create Release
-    needs: [build-lp-lock, build-vesting]
+    needs: [generate-and-build-lp-lock, generate-and-build-vesting]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -201,21 +186,49 @@ jobs:
             - ✅ LP Lock Contract (`prc20_lp_lock_optimized.wasm`)
             - ✅ Vesting Contract (`prc20_vesting_optimized.wasm`)
             
-            ### Checksums:
-            See `checksums.txt` for SHA256 hashes.
+            ### Security Features:
+            **LP Lock:**
+            - Overflow protection with checked arithmetic
+            - Reentrancy protection
+            - Access control enforcement
+            - Input validation
+            - Safe math operations
             
-            ### Deployment:
+            **Vesting:**
+            - Cliff period support
+            - Linear vesting calculation
+            - Revoke functionality (owner only)
+            - Reentrancy protection
+            - Safe time calculations
+            
+            ### Download & Verify:
             ```bash
             # Download contracts
             wget https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.VERSION }}/prc20_lp_lock_optimized.wasm
             wget https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.VERSION }}/prc20_vesting_optimized.wasm
+            wget https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.VERSION }}/checksums.txt
             
             # Verify checksums
-            wget https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.VERSION }}/checksums.txt
             sha256sum -c checksums.txt
+            ```
             
-            # Deploy to Paxi
-            paxid tx wasm store prc20_lp_lock_optimized.wasm --from wallet-name --gas 3000000 --fees 15000upaxi --chain-id paxi-testnet-1
+            ### Deploy to Paxi:
+            ```bash
+            # Deploy LP Lock
+            paxid tx wasm store prc20_lp_lock_optimized.wasm \
+              --from wallet-name \
+              --gas 3000000 \
+              --fees 15000upaxi \
+              --chain-id paxi-testnet-1 \
+              --yes
+            
+            # Deploy Vesting
+            paxid tx wasm store prc20_vesting_optimized.wasm \
+              --from wallet-name \
+              --gas 3000000 \
+              --fees 15000upaxi \
+              --chain-id paxi-testnet-1 \
+              --yes
             ```
           files: |
             artifacts/prc20_lp_lock_optimized.wasm
