--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  RUST_VERSION: 1.81.0
+  RUST_VERSION: 1.83.0  # FIXED: Update dari 1.81.0 ke 1.83.0 untuk support edition2024
 
 jobs:
   generate-and-build-lp-lock:
